Some styling tweaks

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,8 @@ body {
 .inline {
   display: inline-block;
 }
+
+input[type='number']::-webkit-inner-spin-button, 
+input[type='number']::-webkit-outer-spin-button { 
+    opacity: 1;
+}
